plugins/binding/capi/include/TellusimCMath.h

/*****************************************************************************\
 *
 * Vector2
 *
\*****************************************************************************/

/*
 */
typedef struct TSVector2i {
	union {
		struct {
			int32_t x, y;
		};
		int32_t v[2];
	};
} TSVector2i;
typedef struct TSVector2u {
	union {
		struct {
			uint32_t x, y;
		};
		uint32_t v[2];
	};
} TSVector2u;
typedef struct TSVector2f {
	union {
		struct {
			float32_t x, y;
		};
		float32_t v[2];
	};
} TSVector2f;
TS_CAPI TSVector2i* TS_CCALL tsVector2i_abs(TSVector2i *ret, const TSVector2i *v);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_abs(TSVector2f *ret, const TSVector2f *v);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_neg(TSVector2i *ret, const TSVector2i *v);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_neg(TSVector2f *ret, const TSVector2f *v);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_mul1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_mul1(TSVector2u *ret, const TSVector2u *v0, uint32_t v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_mul1(TSVector2f *ret, const TSVector2f *v0, float32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_div1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_div1(TSVector2u *ret, const TSVector2u *v0, uint32_t v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_div1(TSVector2f *ret, const TSVector2f *v0, float32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_add1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_add1(TSVector2u *ret, const TSVector2u *v0, uint32_t v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_add1(TSVector2f *ret, const TSVector2f *v0, float32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_sub1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_sub1(TSVector2u *ret, const TSVector2u *v0, uint32_t v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_sub1(TSVector2f *ret, const TSVector2f *v0, float32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_and1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_and1(TSVector2u *ret, const TSVector2u *v0, uint32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_or1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_or1(TSVector2u *ret, const TSVector2u *v0, uint32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_xor1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_xor1(TSVector2u *ret, const TSVector2u *v0, uint32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_shl1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_shl1(TSVector2u *ret, const TSVector2u *v0, uint32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_shr1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_shr1(TSVector2u *ret, const TSVector2u *v0, uint32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_mul(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_mul(TSVector2u *ret, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_mul(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_div(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_div(TSVector2u *ret, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_div(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_add(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_add(TSVector2u *ret, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_add(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_sub(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_sub(TSVector2u *ret, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_sub(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_and(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_and(TSVector2u *ret, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_or(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_or(TSVector2u *ret, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_xor(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_xor(TSVector2u *ret, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_min(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_min(TSVector2u *ret, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_min(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_max(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_max(TSVector2u *ret, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_max(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_clamp(TSVector2i *ret, const TSVector2i *v, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2u* TS_CCALL tsVector2u_clamp(TSVector2u *ret, const TSVector2u *v, const TSVector2u *v0, const TSVector2u *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_clamp(TSVector2f *ret, const TSVector2f *v, const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_saturate(TSVector2f *ret, const TSVector2f *v);
TS_CAPI float32_t TS_CCALL tsVector2f_dot(const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI float32_t TS_CCALL tsVector2f_cross(const TSVector2f *v0, const TSVector2f *v1);
TS_CAPI float32_t TS_CCALL tsVector2f_length(const TSVector2f *v);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_normalize(TSVector2f *ret, const TSVector2f *v);
TS_CAPI TSVector2f* TS_CCALL tsVector2f_lerp(TSVector2f *ret, const TSVector2f *v0, const TSVector2f *v1, float32_t k);