plugins/binding/rust/source/TellusimRSMath.rs


/*
 */
extern "C" {
	fn tsVector2i_abs(ret: *mut Vector2i, v: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_neg(ret: *mut Vector2i, v: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_mul1(ret: *mut Vector2i, v0: *const Vector2i, v1: i32) -> *mut Vector2i;
	fn tsVector2i_div1(ret: *mut Vector2i, v0: *const Vector2i, v1: i32) -> *mut Vector2i;
	fn tsVector2i_add1(ret: *mut Vector2i, v0: *const Vector2i, v1: i32) -> *mut Vector2i;
	fn tsVector2i_sub1(ret: *mut Vector2i, v0: *const Vector2i, v1: i32) -> *mut Vector2i;
	fn tsVector2i_and1(ret: *mut Vector2i, v0: *const Vector2i, v1: i32) -> *mut Vector2i;
	fn tsVector2i_or1(ret: *mut Vector2i, v0: *const Vector2i, v1: i32) -> *mut Vector2i;
	fn tsVector2i_xor1(ret: *mut Vector2i, v0: *const Vector2i, v1: i32) -> *mut Vector2i;
	fn tsVector2i_shl1(ret: *mut Vector2i, v0: *const Vector2i, v1: i32) -> *mut Vector2i;
	fn tsVector2i_shr1(ret: *mut Vector2i, v0: *const Vector2i, v1: i32) -> *mut Vector2i;
	fn tsVector2i_mul(ret: *mut Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_div(ret: *mut Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_add(ret: *mut Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_sub(ret: *mut Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_and(ret: *mut Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_or(ret: *mut Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_xor(ret: *mut Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_min(ret: *mut Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_max(ret: *mut Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
	fn tsVector2i_clamp(ret: *mut Vector2i, v: *const Vector2i, v0: *const Vector2i, v1: *const Vector2i) -> *mut Vector2i;
}

/*****************************************************************************\
 *
 * Vector2u
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Vector2u {
	pub x: u32,
	pub y: u32,
}

/*
 */
impl Vector2u {
	
	pub fn new_s(v: u32) -> Vector2u {
		Vector2u { x: v, y: v }
	}
	pub fn new_v2u(v: &Vector2i) -> Vector2u {
		Vector2u { x: v.x as u32, y: v.y as u32 }
	}
	pub fn new_v2f(v: &Vector2f) -> Vector2u {
		Vector2u { x: v.x as u32, y: v.y as u32 }
	}
	pub fn new_v2d(v: &Vector2d) -> Vector2u {
		Vector2u { x: v.x as u32, y: v.y as u32 }
	}
	pub fn new_v3(v: &Vector3u) -> Vector2u {
		Vector2u { x: v.x, y: v.y }
	}
	pub fn new_v4(v: &Vector4u) -> Vector2u {
		Vector2u { x: v.x, y: v.y }
	}
	pub fn new(x: u32, y: u32) -> Vector2u {
		Vector2u { x: x, y: y }
	}
	pub fn new_a(v: &[u32]) -> Vector2u {
		Vector2u { x: v[0], y: v[1] }
	}
	
	pub fn min(v0: &Vector2u, v1: &Vector2u) -> Vector2u {
		let mut ret = Vector2u::default();
		unsafe { tsVector2u_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector2u, v1: &Vector2u) -> Vector2u {
		let mut ret = Vector2u::default();
		unsafe { tsVector2u_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector2u, v1: &Vector2u) -> Vector2u {
		let mut ret = Vector2u::default();
		unsafe { tsVector2u_clamp(&mut ret, self, v0, v1); }
		ret
	}
	
	pub fn zero() -> Vector2u {
		Vector2u { x: 0, y: 0 }
	}
	pub fn one() -> Vector2u {
		Vector2u { x: 1, y: 1 }
	}
}

/*
 */
impl fmt::Display for Vector2u {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1})", self.x, self.y)
	}
}

/*
 */
declare_scalar_op!(Vector2u, u32, Mul, mul, tsVector2u_mul1);
declare_scalar_op!(Vector2u, u32, Div, div, tsVector2u_div1);
declare_scalar_op!(Vector2u, u32, Add, add, tsVector2u_add1);
declare_scalar_op!(Vector2u, u32, Sub, sub, tsVector2u_sub1);
declare_scalar_op!(Vector2u, u32, BitAnd, bitand, tsVector2u_and1);
declare_scalar_op!(Vector2u, u32, BitOr,  bitor,  tsVector2u_or1);
declare_scalar_op!(Vector2u, u32, BitXor, bitxor, tsVector2u_xor1);
declare_scalar_op!(Vector2u, u32, Shl, shl, tsVector2u_shl1);
declare_scalar_op!(Vector2u, u32, Shr, shr, tsVector2u_shr1);

/*
 */
declare_vector_op!(Vector2u, Mul, mul, tsVector2u_mul);
declare_vector_op!(Vector2u, Div, div, tsVector2u_div);
declare_vector_op!(Vector2u, Add, add, tsVector2u_add);
declare_vector_op!(Vector2u, Sub, sub, tsVector2u_sub);
declare_vector_op!(Vector2u, BitAnd, bitand, tsVector2u_and);
declare_vector_op!(Vector2u, BitOr,  bitor,  tsVector2u_or);
declare_vector_op!(Vector2u, BitXor, bitxor, tsVector2u_xor);

/*
 */
extern "C" {
	fn tsVector2u_mul1(ret: *mut Vector2u, v0: *const Vector2u, v1: u32) -> *mut Vector2u;
	fn tsVector2u_div1(ret: *mut Vector2u, v0: *const Vector2u, v1: u32) -> *mut Vector2u;
	fn tsVector2u_add1(ret: *mut Vector2u, v0: *const Vector2u, v1: u32) -> *mut Vector2u;
	fn tsVector2u_sub1(ret: *mut Vector2u, v0: *const Vector2u, v1: u32) -> *mut Vector2u;
	fn tsVector2u_and1(ret: *mut Vector2u, v0: *const Vector2u, v1: u32) -> *mut Vector2u;
	fn tsVector2u_or1(ret: *mut Vector2u, v0: *const Vector2u, v1: u32) -> *mut Vector2u;
	fn tsVector2u_xor1(ret: *mut Vector2u, v0: *const Vector2u, v1: u32) -> *mut Vector2u;
	fn tsVector2u_shl1(ret: *mut Vector2u, v0: *const Vector2u, v1: u32) -> *mut Vector2u;
	fn tsVector2u_shr1(ret: *mut Vector2u, v0: *const Vector2u, v1: u32) -> *mut Vector2u;
	fn tsVector2u_mul(ret: *mut Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
	fn tsVector2u_div(ret: *mut Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
	fn tsVector2u_add(ret: *mut Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
	fn tsVector2u_sub(ret: *mut Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
	fn tsVector2u_and(ret: *mut Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
	fn tsVector2u_or(ret: *mut Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
	fn tsVector2u_xor(ret: *mut Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
	fn tsVector2u_min(ret: *mut Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
	fn tsVector2u_max(ret: *mut Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
	fn tsVector2u_clamp(ret: *mut Vector2u, v: *const Vector2u, v0: *const Vector2u, v1: *const Vector2u) -> *mut Vector2u;
}

/*****************************************************************************\
 *
 * Vector2f
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Vector2f {
	pub x: f32,
	pub y: f32,
}

/*
 */
impl Vector2f {
	
	pub fn new_s(v: f32) -> Vector2f {
		Vector2f { x: v, y: v }
	}
	pub fn new_v2i(v: &Vector2i) -> Vector2f {
		Vector2f { x: v.x as f32, y: v.y as f32 }
	}
	pub fn new_v2u(v: &Vector2u) -> Vector2f {
		Vector2f { x: v.x as f32, y: v.y as f32 }
	}
	pub fn new_v2d(v: &Vector2d) -> Vector2f {
		Vector2f { x: v.x as f32, y: v.y as f32 }
	}
	pub fn new_v3(v: &Vector3f) -> Vector2f {
		Vector2f { x: v.x, y: v.y }
	}
	pub fn new_v4(v: &Vector4f) -> Vector2f {
		Vector2f { x: v.x, y: v.y }
	}
	pub fn new(x: f32, y: f32) -> Vector2f {
		Vector2f { x: x, y: y }
	}
	pub fn new_a(v: &[f32]) -> Vector2f {
		Vector2f { x: v[0], y: v[1] }
	}
	
	pub fn abs(&self) -> Vector2f {
		let mut ret = Vector2f::default();
		unsafe { tsVector2f_abs(&mut ret, self); }
		ret
	}
	
	pub fn min(v0: &Vector2f, v1: &Vector2f) -> Vector2f {
		let mut ret = Vector2f::default();
		unsafe { tsVector2f_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector2f, v1: &Vector2f) -> Vector2f {
		let mut ret = Vector2f::default();
		unsafe { tsVector2f_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector2f, v1: &Vector2f) -> Vector2f {
		let mut ret = Vector2f::default();
		unsafe { tsVector2f_clamp(&mut ret, self, v0, v1); }
		ret
	}
	pub fn saturate(&self) -> Vector2f {
		let mut ret = Vector2f::default();
		unsafe { tsVector2f_saturate(&mut ret, self); }
		ret
	}
	
	pub fn dot(v0: &Vector2f, v1: &Vector2f) -> f32 {
		unsafe { tsVector2f_dot(v0, v1) }
	}
	pub fn cross(v0: &Vector2f, v1: &Vector2f) -> f32 {
		unsafe { tsVector2f_cross(v0, v1) }
	}
	
	pub fn length(&self) -> f32 {
		unsafe { tsVector2f_length(self) }
	}
	pub fn normalize(&self) -> Vector2f {
		let mut ret = Vector2f::default();
		unsafe { tsVector2f_normalize(&mut ret, self); }
		ret
	}
	
	pub fn lerp(v0: &Vector2f, v1: &Vector2f, k: f32) -> Vector2f {
		let mut ret = Vector2f::default();
		unsafe { tsVector2f_lerp(&mut ret, v0, v1, k); }
		ret
	}
	
	pub fn zero() -> Vector2f {
		Vector2f { x: 0.0, y: 0.0 }
	}
	pub fn one() -> Vector2f {
		Vector2f { x: 1.0, y: 1.0 }
	}
}

/*
 */
impl fmt::Display for Vector2f {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1})", self.x, self.y)
	}
}

/*
 */
declare_neg_op!(Vector2f, tsVector2f_neg);

/*
 */
declare_scalar_op!(Vector2f, f32, Mul, mul, tsVector2f_mul1);
declare_scalar_op!(Vector2f, f32, Div, div, tsVector2f_div1);
declare_scalar_op!(Vector2f, f32, Add, add, tsVector2f_add1);
declare_scalar_op!(Vector2f, f32, Sub, sub, tsVector2f_sub1);

/*
 */
declare_vector_op!(Vector2f, Mul, mul, tsVector2f_mul);
declare_vector_op!(Vector2f, Div, div, tsVector2f_div);
declare_vector_op!(Vector2f, Add, add, tsVector2f_add);
declare_vector_op!(Vector2f, Sub, sub, tsVector2f_sub);

/*
 */
extern "C" {
	fn tsVector2f_abs(ret: *mut Vector2f, v: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_neg(ret: *mut Vector2f, v: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_mul1(ret: *mut Vector2f, v0: *const Vector2f, v1: f32) -> *mut Vector2f;
	fn tsVector2f_div1(ret: *mut Vector2f, v0: *const Vector2f, v1: f32) -> *mut Vector2f;
	fn tsVector2f_add1(ret: *mut Vector2f, v0: *const Vector2f, v1: f32) -> *mut Vector2f;
	fn tsVector2f_sub1(ret: *mut Vector2f, v0: *const Vector2f, v1: f32) -> *mut Vector2f;
	fn tsVector2f_mul(ret: *mut Vector2f, v0: *const Vector2f, v1: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_div(ret: *mut Vector2f, v0: *const Vector2f, v1: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_add(ret: *mut Vector2f, v0: *const Vector2f, v1: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_sub(ret: *mut Vector2f, v0: *const Vector2f, v1: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_min(ret: *mut Vector2f, v0: *const Vector2f, v1: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_max(ret: *mut Vector2f, v0: *const Vector2f, v1: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_clamp(ret: *mut Vector2f, v: *const Vector2f, v0: *const Vector2f, v1: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_saturate(ret: *mut Vector2f, v: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_dot(v0: *const Vector2f, v1: *const Vector2f) -> f32;
	fn tsVector2f_cross(v0: *const Vector2f, v1: *const Vector2f) -> f32;
	fn tsVector2f_length(v: *const Vector2f) -> f32;
	fn tsVector2f_normalize(ret: *mut Vector2f, v: *const Vector2f) -> *mut Vector2f;
	fn tsVector2f_lerp(ret: *mut Vector2f, v0: *const Vector2f, v1: *const Vector2f, k: f32) -> *mut Vector2f;
}

/*****************************************************************************\
 *
 * Vector2d
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Vector2d {
	pub x: f64,
	pub y: f64,
}

/*
 */
impl Vector2d {
